--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,4 +1,6 @@
-
+<div>
+    <a routerLink="/list">list</a>
+</div>
 <form [formGroup]="demoForm" (ngSubmit)="onSubmit()">
     <label for="title">Title:</label>
     <input formControlName="title" type="text" placeholder="Enter title" required/>
@@ -7,5 +9,5 @@
     <input formControlName="content" type="text" placeholder="Enter content" required/>
     <br>
     <button type="submit" [disabled]="!demoForm.valid">Submit</button>
-    
 </form>
+
